--- a/style/css/style.css
+++ b/style/css/style.css
@@ -445,6 +445,11 @@ h2 {
   font-size: 24px;
 }
 
+p {
+  font-family: "RoundRegular";
+  font-size: 18px;
+}
+
 @font-face {
   font-family: 'RoundLight';
   src: url("../fonts/din-round/din-round-light.eot") format("embedded-opentype"), url("../fonts/din-round/din-round-light.woff") format("woff"), url("../fonts/din-round/din-round-light.ttf") format("truetype");
@@ -510,7 +515,7 @@ h2 {
   padding-top: 28px;
 }
 
-.product_container .product .product_btn {
+.product_btn {
   background: #FF5A5F;
   padding: 10px 20px;
   margin-top: -15px;
@@ -518,28 +523,74 @@ h2 {
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.19);
 }
 
-.product_container .product .product_btn ul {
+.product_btn ul {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
   margin-bottom: 0;
 }
 
-.product_container .product .product_btn li {
+.product_btn li {
   color: #fff;
   font-size: 18px;
   padding-top: 10px;
 }
 
-.product_container .product .product_btn li:nth-child(2) {
+.product_btn li:nth-child(2) {
   font-size: 24px;
+}
+
+.back_arrow {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+}
+
+.single_hero {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+}
+
+.single_hero img {
+  width: 100%;
+}
+
+.single_info {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.19);
+  padding: 20px;
+  margin-top: -30px;
+  position: relative;
+}
+
+.single_tags {
+  margin-top: 15px;
+}
+
+.single_tags div {
+  border: 1px solid #343845;
+  padding: 4px 12px;
+  display: inline-block;
+  margin-right: 8px;
+  border-radius: 20px;
+  margin-top: 5px;
+}
+
+.single_tags div li {
+  list-style-type: none;
+  color: #343845;
+  font-weight: 300;
+  font-size: 12px;
+  text-transform: uppercase;
 }
 
 .navigation {
   position: fixed;
   background: #fff;
   width: 100%;
-  padding: 50px 50px 5px 50px;
+  padding: 12px 50px 5px 50px;
   bottom: 0;
   z-index: 999;
 }
@@ -548,6 +599,10 @@ h2 {
   margin: 0;
   display: flex;
   justify-content: space-between;
+}
+
+.navigation ul a {
+  text-align: center;
 }
 
 .navigation ul li {
@@ -572,4 +627,20 @@ h2 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.main_header {
+  width: 100%;
+  padding: 15px;
+  background: #343845;
+}
+
+.main_header ul {
+  margin: 0;
+}
+
+.main_header h2 {
+  color: #fff;
+  text-align: center;
+  margin: 0;
 }
